--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   <div class="col-md-12">
                      <h1 class="banner_taital">We care Of You</h1>
                      <p class="banner_text">When looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to </p>
-                     <div class="read_bt"><a href="#">Read More</a></div>
+                   
                   </div>
                </div>
             </div>
@@ -118,79 +118,8 @@
          <!-- banner section end -->
       </div>
       <!-- header section end -->
-      <!-- appointment section start -->
-      <div class="appointment_section">
-         <div class="container">
-            <div class="appointment_box">
-               <div class="row">
-                  <div class="col-md-12">
-                     <h1 class="appointment_taital">Book <span style="color: #0cb7d6;">Appointment</span></h1>
-                  </div>
-               </div>
-               <div class="appointment_section_2">
-                  <div class="row">
-                     <div class="col-md-4">
-                        <p class="doctorname_text">Patient Name</p>
-                        <input type="text" class="email_text" placeholder="" name="">
-                     </div>
-                     <div class="col-md-4">
-                        <form>
-                           <div class="form-group">
-                              <p class="doctorname_text">Doctor's Name</p>
-                              <select class="form-control" id="">
-                                 <option>Normal distribution </option>
-                                 <option>200</option>
-                                 <option>300</option>
-                                 <option>400</option>
-                                 <option>500</option>
-                              </select>
-                           </div>
-                        </form>
-                     </div>
-                     <div class="col-md-4">
-                        <form>
-                           <div class="form-group">
-                              <p class="doctorname_text">Department's Name</p>
-                              <select class="form-control" id="">
-                                 <option>Normal distribution </option>
-                                 <option>2</option>
-                                 <option>3</option>
-                                 <option>4</option>
-                                 <option>5</option>
-                              </select>
-                           </div>
-                        </form>
-                     </div>
-                  </div>
-                  <div class="row">
-                     <div class="col-md-4">
-                        <p class="doctorname_text">Phone Number</p>
-                        <input type="text" class="email_text" placeholder="" name="">
-                     </div>
-                     <div class="col-md-4">
-                        <form>
-                           <div class="form-group">
-                              <p class="doctorname_text">Department</p>
-                              <select class="form-control" id="">
-                                 <option>Normal distribution</option>
-                                 <option>2</option>
-                                 <option>3</option>
-                                 <option>4</option>
-                                 <option>5</option>
-                              </select>
-                           </div>
-                        </form>
-                     </div>
-                     <div class="col-md-4">
-                        <p class="doctorname_text">Choose Date</p>
-                        <input id="datepicker" placeholder="Select Date" width="270" />
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- appointment section end -->
+      <div id="ff-compose"></div>
+<script async defer src="https://formfacade.com/include/100695741591801085155/form/1FAIpQLSfZ0aab-1jF1vU_fuuJ8VuK0NdhKYZPypjC2OyWLMSi1ZCgOg/classic.js?div=ff-compose"></script>
       <!-- about section start -->
       <div class="about_section layout_padding">
          <div class="container">
