--- a/index.html
+++ b/index.html
@@ -118,8 +118,23 @@
          <!-- banner section end -->
       </div>
       <!-- header section end -->
-      <div id="ff-compose"></div>
-<script async defer src="https://formfacade.com/include/100695741591801085155/form/1FAIpQLSfZ0aab-1jF1vU_fuuJ8VuK0NdhKYZPypjC2OyWLMSi1ZCgOg/classic.js?div=ff-compose"></script>
+      <!-- Google Calendar Appointment Scheduling begin -->
+<link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
+<script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
+<script>
+(function() {
+  var target = document.currentScript;
+  window.addEventListener('load', function() {
+    calendar.schedulingButton.load({
+      url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2Yg6mR9CILlf6f4Zcvbgx3xEQQb6kYJDWEOGNwaU47zZrUc5IxK96U8e5iI3NnRg03OCFBTT5T?gv=true',
+      color: '#039BE5',
+      label: 'Book an appointment',
+      target,
+    });
+  });
+})();
+</script>
+<!-- end Google Calendar Appointment Scheduling -->
       <!-- about section start -->
       <div class="about_section layout_padding">
          <div class="container">
