--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
       </div>
       <!-- header section end -->
      <!-- Google Calendar Appointment Scheduling begin -->
-<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2Yg6mR9CILlf6f4Zcvbgx3xEQQb6kYJDWEOGNwaU47zZrUc5IxK96U8e5iI3NnRg03OCFBTT5T?gv=true&timezone=Asia/Kolkata" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2Yg6mR9CILlf6f4Zcvbgx3xEQQb6kYJDWEOGNwaU47zZrUc5IxK96U8e5iI3NnRg03OCFBTT5T?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
 <!-- end Google Calendar Appointment Scheduling -->
-
       <!-- about section start -->
       <div class="about_section layout_padding">
          <div class="container">
