--- a/index.html
+++ b/index.html
@@ -119,15 +119,21 @@
       </div>
       <!-- header section end -->
      <!-- Google Calendar Appointment Scheduling begin -->
-<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2Yg6mR9CILlf6f4Zcvbgx3xEQQb6kYJDWEOGNwaU47zZrUc5IxK96U8e5iI3NnRg03OCFBTT5T?gv=true&timezone=Asia/Kolkata" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
-      <!-- Add this where you want to display the local time zone -->
-<p id="local-time-zone">Loading time zone...</p>
-
+<link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
+<script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
 <script>
-  const timeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
-  document.getElementById("local-time-zone").innerText = `Your time zone: ${timeZone}`;
+(function() {
+  var target = document.currentScript;
+  window.addEventListener('load', function() {
+    calendar.schedulingButton.load({
+      url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2Yg6mR9CILlf6f4Zcvbgx3xEQQb6kYJDWEOGNwaU47zZrUc5IxK96U8e5iI3NnRg03OCFBTT5T?gv=true',
+      color: '#F4511E',
+      label: 'Book an appointment',
+      target,
+    });
+  });
+})();
 </script>
-
 <!-- end Google Calendar Appointment Scheduling -->
       <!-- about section start -->
       <div class="about_section layout_padding">
