--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   var target = document.currentScript;
   window.addEventListener('load', function() {
     calendar.schedulingButton.load({
-      url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2Yg6mR9CILlf6f4Zcvbgx3xEQQb6kYJDWEOGNwaU47zZrUc5IxK96U8e5iI3NnRg03OCFBTT5T?gv=true',
+      url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2Yg6mR9CILlf6f4Zcvbgx3xEQQb6kYJDWEOGNwaU47zZrUc5IxK96U8e5iI3NnRg03OCFBTT5T?gv=true&ctz=Asia/Kolkata',
       color: '#F4511E',
       label: 'Book an appointment',
       target,
