--- a/index.html
+++ b/index.html
@@ -118,23 +118,8 @@
          <!-- banner section end -->
       </div>
       <!-- header section end -->
-     <!-- Google Calendar Appointment Scheduling begin -->
-<link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
-<script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
-<script>
-(function() {
-  var target = document.currentScript;
-  window.addEventListener('load', function() {
-    calendar.schedulingButton.load({
-      url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2Yg6mR9CILlf6f4Zcvbgx3xEQQb6kYJDWEOGNwaU47zZrUc5IxK96U8e5iI3NnRg03OCFBTT5T?gv=true&ctz=Asia/Kolkata',
-      color: '#F4511E',
-      label: 'Book an appointment',
-      target,
-    });
-  });
-})();
-</script>
-<!-- end Google Calendar Appointment Scheduling -->
+    <p>To book an appointment, <a href="https://calendar.app.google/zse69pwgGbc53VLW9" target="_blank">click here</a>.</p>
+
       <!-- about section start -->
       <div class="about_section layout_padding">
          <div class="container">
