--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
          <!-- banner section end -->
       </div>
       <!-- header section end -->
-    <p>To book an appointment, <a href="https://calendar.app.google/mM1TPVappbTea8zg8&timezone=Asia/kolkata" target="_blank">click here</a>.</p>
+    <p>To book an appointment, <a href="https://calendar.app.google/mM1TPVappbTea8zg8" target="_blank">click here</a>.</p>
 
       <!-- about section start -->
       <div class="about_section layout_padding">
