--- a/index.html
+++ b/index.html
@@ -119,7 +119,50 @@
       </div>
       <!-- header section end -->
     <p>To book an appointment, <a href="https://calendar.app.google/mM1TPVappbTea8zg8" target="_blank">click here</a>.</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Attractive Marquee</title>
+    <style>
+        /* Marquee container styling */
+        .marquee-container {
+            background-color: #471f71; /* Adjust color as needed */
+            padding: 10px;
+            border: 2px solid #0cc06c; /* Border color */
+            box-shadow: 0 0 10px #0cc06c;
+        }
 
+        /* Marquee text styling */
+        .marquee-text {
+            color: #ffe619;
+            font-weight: bold;
+            font-size: 1.2em;
+            text-shadow: 0 0 5px #ef819b, 0 0 10px #ef819b;
+            animation: glowing 1.5s infinite alternate;
+        }
+
+        /* Glowing effect */
+        @keyframes glowing {
+            from {
+                text-shadow: 0 0 5px #ef819b, 0 0 10px #ef819b;
+            }
+            to {
+                text-shadow: 0 0 15px #ef819b, 0 0 20px #ef819b;
+            }
+        }
+    </style>
+</head>
+<body>
+
+<div class="marquee-container">
+    <marquee class="marquee-text" behavior="scroll" direction="left" scrollamount="8">
+        Welcome to Dr. Mujumdar Clinic! Your trusted partner in quality healthcare since 2008.
+    </marquee>
+</div>
+
+</body>
+</html>
       <!-- about section start -->
       <div class="about_section layout_padding">
          <div class="container">
