--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@ We uphold the highest standards of integrity and empathy in all interactions wit
                               <div class="carousel-item">
                                  <div class="customer_main">
                                     <div class="customer_right">
-                                       <h3 class="customer_name">Morijorch <span class="quick_icon"><img src="images/quick-icon.png"></span></h3>
+                                       <h3 class="customer_name">Will update in short time<span class="quick_icon"><img src="images/quick-icon.png"></span></h3>
                                        <p class="default_text">Default model text,</p>
-                                       <p class="enim_text">editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various</p>
+                                       <p class="enim_text">We will update shortly</p>
                                     </div>
                                  </div>
                               </div>
@@ -473,7 +473,7 @@ We uphold the highest standards of integrity and empathy in all interactions wit
                   <div class="col-md-6 padding_left_15">
                      <div class="map_main">
                         <div class="map-responsive">
-                           <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m11!1m3!1d165.90825230429775!2d74.72623255408232!3d19.077850857696326!2m2!1f257.0158594792844!2f45!3m2!1i1024!2i768!4f35!5e1!3m2!1sen!2sin!4v1730953083646!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                      </div>
                   </div>
