--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                <div class="row">
                   <div class="col-md-12">
                      <h1 class="banner_taital"><b><i>Welcome to Dr Mujumdar Clinic </i></b></h1>
-                     <p class="banner_text"><b><i>Providing quality health care                               since 2008 </i></b></p>
+                     <p class="banner_text"><b><i>Providing quality health care            since 2008 </i></b></p>
                    
                   </div>
                </div>
@@ -181,7 +181,7 @@
 
 Dedicated to delivering superior healthcare services
 History of Compassionate Care
-Since our establishment,  we have been committed to providing compassionate and personalized medical care to our patients.
+Since our establishment,  we have been committed to providing compassionate and personalized medical care to our patients.Because Your Family deserves the best
 
 Mission to Serve the Community
 Our mission is to improve the health and well-being of the community by offering accessible and high-quality healthcare services.
